Fixing bug on Safari

--- a/src/styles.css
+++ b/src/styles.css
@@ -6,7 +6,6 @@
   padding: 0;
   outline: 0;
   box-sizing: border-box;
-  user-select: none;
 }
 
 body {
